# narou_capture

./: .gitignore  README.md  build_exe.py  config.json  main.py  make_exe.bat  make_exe.sh  narou_capture.spec  pyproject.toml  requirements.txt  run.bat  run.sh
