[tool.poetry]
name = "narou_capture"
version = "0.1.0"
description = "小説家になろうのランキングのスクリーンショットを撮るプログラム"
authors = ["Kuno Maichi <kuno.maichi@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.2.0"
pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.1"

[tool.poetry.scripts]
narou-capture = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
